Android: Fix wrong tap postion in a11y mode

https://crrev.com/c/517683 introduced a bug in accessibility mode
when page scale factor is not 1. Before the patch, the hover event
coordinate is converted to CSS (https://goo.gl/ER8wu5) but after
the patch the unit was DIP by mistake. (https://goo.gl/ER8wu5).
This CL fixes it by applying the page scale factor to set the unit
right to CSS.

Bug: 840609
Change-Id: Iaa17882e2ffb2d5637e59df1ebe7cf677f4a76a3
Reviewed-on: https://chromium-review.googlesource.com/1055067
Commit-Queue: Jinsuk Kim <jinsukkim@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558165}
Former-commit-id: 83d6178753e0804b93619fa68202f6d963a552b2